--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,11 @@ const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true })
     <h1>My Astro Learning Blog</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
-      {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+      {allPosts.map((post: any) => 
+        // <BlogPost url={post.url} title={post.frontmatter.title} />
+        <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />
+      )}
+      
     </ul>
     <Footer />
     <script>
