--- a/src/components/Hamburguer.astro
+++ b/src/components/Hamburguer.astro
@@ -5,3 +5,20 @@
   <span class="line"></span>
   <span class="line"></span>
 </div>
+
+<style>
+  .hamburger {
+    cursor: pointer;
+    display: flex;
+    height: 24px;
+    justify-content: space-around;
+    flex-direction: column;
+  }
+
+  .hamburger .line {
+    display: block;
+    width: 24px;
+    height: 3px;
+    @apply bg-primary-400
+  }
+</style>
