--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,4 +1,27 @@
 ---
-const { title, url } = Astro.props;
+import { Image } from 'astro:assets';
+const { title, description, url, image, imageAlt, pubDate, author } = Astro.props;
 ---
-<li><a href={url}>{title}</a></li>
+<li>
+  <a class="
+    w-full items-stretch flex flex-col md:flex-row
+    bg-background border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:border-gray-700 dark:hover:bg-gray-700
+  "
+  href={url}>
+      <!-- { image && <Image class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg" src={image} alt={imageAlt} /> } -->
+      { image && <div class="h-auto md:min-w-48 md:w-48">
+        <Image class="object-cover w-full rounded-t-lg h-96 md:h-full md:w-48 md:rounded-none md:rounded-s-lg" src={image} alt={imageAlt} />
+      </div>}
+      <div class="flex flex-col justify-between px-8 py-4 leading-normal md:min-h-36">
+        <div class="w-full flex-shrink-0">
+          <h2 class="my-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{title}</h2>
+          <p class=" max-w-full w-auto mb-3 font-normal text-gray-700 dark:text-gray-400">{description}</p>
+        </div>
+        <div>
+          <p class="text-sm">
+            Written by {author.name} on {pubDate.toLocaleDateString()}
+          </p>
+        </div>
+      </div>
+  </a>
+</li>
