--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -3,36 +3,11 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 import { getTags } from "@services/tags";
 const pageTitle = "Tag Index";
 const tags = await getTags()
-console.log(tags)
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div class="tags">
-    {
-      tags.map((tag) => (
-        <p class="tag">
-          <a href={`/tags/${tag}`}>{tag}</a>
-        </p>
-      ))
-    }
-  </div>
+  <p>(Alphabetical order)</p>
+  <ul>
+    {tags.map(t => <li class="p-2"><a href={`/tags/${t}`}># {t}</a></li>)}
+  </ul>
 </BaseLayout>
-<style>
-  a {
-    color: #00539F;
-  }
-
-  .tags {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .tag {
-    margin: 0.25em;
-    border: dotted 1px #a1a1a1;
-    border-radius: .5em;
-    padding: .5em 1em;
-    font-size: 1.15em;
-    background-color: #F8FCFD;
-  }
-</style>
