--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,11 +4,13 @@ import Footer from "@components/Footer.astro";
 import "@styles/global.css";
 import "@fontsource/ibm-plex-mono";
 const { pageTitle, description } = Astro.props;
+import ogImage from '@media/images/planet.svg';
 const DEFAULT_DESCRIPTION = 'A personal blog on programming and software architecture, featuring reflections, analysis, and best practices for building robust and scalable systems.'
 ---
 
 <html lang="en">
   <head>
+    <meta property="og:image" content={ogImage.src} />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name="description" content={ description || DEFAULT_DESCRIPTION}>
@@ -17,8 +19,8 @@ const DEFAULT_DESCRIPTION = 'A personal blog on programming and software archite
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body class="transition-colors ease-in-out duration-200">
-    <div class="fixed w-full bg-background border-b border-b-gray-200  dark:border-b-primary-300">
+  <body class="triangles transition-colors ease-in-out duration-200">
+    <div class="triangles fixed w-full bg-background border-b border-b-gray-200  dark:border-b-primary-300">
       <div class="max-w-[1024px] m-auto px-4 py-6">
         <Header />
       </div>
