--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -14,6 +14,9 @@ const {
 ---
 <BaseLayout pageTitle={title} description={description}>
   <div class="flex flex-col gap-8 mt-4 mb-12">
+    { image && (
+      <Image class="py-2" src={image} alt={imageAlt} />
+    )}
     <div class="">
       <em class="text-lg">{description}</em>
     </div>
@@ -23,9 +26,6 @@ const {
     <div class="flex gap-6 w-full overflow-auto">
       <Tags tags={tags} />
     </div>
-    { image && (
-      <Image class="py-2" src={image} alt={imageAlt} />
-    )}
   </div>
   <!-- <div class="prose blog-post mb-16 "> -->
   <div class="prose dark:prose-invert
@@ -34,6 +34,7 @@ const {
     prose-headings:no-underline
     prose-a:font-black prose-a:text-primary-600 dark:prose-a:text-primary-400 prose-a:no-underline
     prose-p:text-justify 
+    prose-blockquote:bg-primary-100 prose-blockquote:border-l-4 prose-blockquote:border-primary-500 prose-blockquote:text-primary-600 prose-blockquote:px-4 prose-blockquote:py-2
     prose-img:rounded-sm prose-img:w-full md:prose-img:my-24
     prose-code:rounded-xl
     m-auto
